# Heisenberg-Model

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  grid.hpp  main.cpp  setup.sh  spin.hpp
test/: CMakeLists.txt  test_spin.cpp
